--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click-repl==0.3.0
 colorama==0.4.6
 Django==5.1.4
 django-jazzmin==3.0.1
+django-redis==5.4.0
 executiontime==0.3.6
 kombu==5.4.2
 pillow==11.1.0
